@@ -8,6 +8,7 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.junit.Before;
@@ -15,7 +16,8 @@ import org.junit.Test;
 import org.mockito.ArgumentMatchers;
 import org.mockito.Mockito;
 
-import gov.healthit.chpl.domain.CertificationCriterion;
+import gov.healthit.chpl.certificationCriteria.CertificationCriterion;
+import gov.healthit.chpl.domain.CertificationEdition;
 import gov.healthit.chpl.domain.CertificationResult;
 import gov.healthit.chpl.domain.CertifiedProductSearchDetails;
 import gov.healthit.chpl.exception.EntityRetrievalException;
@@ -118,7 +120,7 @@ public class FunctionalityTestedReviewerTest {
                 .name("func tested")
                 .build());
         CertifiedProductSearchDetails listing = CertifiedProductSearchDetails.builder()
-                .certificationEdition(create2015EditionMap())
+                .edition(create2015Edition())
                 .certificationResult(CertificationResult.builder()
                         .criterion(CertificationCriterion.builder()
                                 .id(1L)
@@ -149,7 +151,7 @@ public class FunctionalityTestedReviewerTest {
                 .name("func tested")
                 .build());
         CertifiedProductSearchDetails listing = CertifiedProductSearchDetails.builder()
-                .certificationEdition(create2015EditionMap())
+                .edition(create2015Edition())
                 .certificationResult(CertificationResult.builder()
                         .criterion(CertificationCriterion.builder()
                                 .id(1L)
@@ -181,7 +183,7 @@ public class FunctionalityTestedReviewerTest {
                 .build());
 
         CertifiedProductSearchDetails listing = CertifiedProductSearchDetails.builder()
-                .certificationEdition(create2015EditionMap())
+                .edition(create2015Edition())
                 .certificationResult(CertificationResult.builder()
                         .criterion(CertificationCriterion.builder()
                                 .id(1L)
@@ -216,7 +218,7 @@ public class FunctionalityTestedReviewerTest {
                 .build());
 
         CertifiedProductSearchDetails listing = CertifiedProductSearchDetails.builder()
-                .certificationEdition(create2015EditionMap())
+                .edition(create2015Edition())
                 .certificationResult(CertificationResult.builder()
                         .criterion(CertificationCriterion.builder()
                                 .id(1L)
@@ -248,7 +250,7 @@ public class FunctionalityTestedReviewerTest {
                 .name("")
                 .build());
         CertifiedProductSearchDetails listing = CertifiedProductSearchDetails.builder()
-                .certificationEdition(create2015EditionMap())
+                .edition(create2015Edition())
                 .certificationResult(CertificationResult.builder()
                         .criterion(CertificationCriterion.builder()
                                 .id(1L)
@@ -283,7 +285,7 @@ public class FunctionalityTestedReviewerTest {
                 .name("")
                 .build());
         CertifiedProductSearchDetails listing = CertifiedProductSearchDetails.builder()
-                .certificationEdition(create2015EditionMap())
+                .edition(create2015Edition())
                 .certificationResult(CertificationResult.builder()
                         .criterion(CertificationCriterion.builder()
                                 .id(1L)
@@ -315,7 +317,7 @@ public class FunctionalityTestedReviewerTest {
                 .name("")
                 .build());
         CertifiedProductSearchDetails listing = CertifiedProductSearchDetails.builder()
-                .certificationEdition(create2015EditionMap())
+                .edition(create2015Edition())
                 .certificationResult(CertificationResult.builder()
                         .criterion(CertificationCriterion.builder()
                                 .id(1L)
@@ -350,7 +352,7 @@ public class FunctionalityTestedReviewerTest {
                 .name("")
                 .build());
         CertifiedProductSearchDetails listing = CertifiedProductSearchDetails.builder()
-                .certificationEdition(create2015EditionMap())
+                .edition(create2015Edition())
                 .certificationResult(CertificationResult.builder()
                         .criterion(CertificationCriterion.builder()
                                 .id(1L)
@@ -381,7 +383,7 @@ public class FunctionalityTestedReviewerTest {
                             .number("170.315 (a)(2)")
                             .title("a2")
                             .removed(false)
-                            .build()).toList())
+                            .build()).collect(Collectors.toList()))
                     .build());
         List<CertificationResultFunctionalityTested> functionalitiesTested = new ArrayList<CertificationResultFunctionalityTested>();
         functionalitiesTested.add(CertificationResultFunctionalityTested.builder()
@@ -394,7 +396,7 @@ public class FunctionalityTestedReviewerTest {
                 .build());
 
         CertifiedProductSearchDetails listing = CertifiedProductSearchDetails.builder()
-                    .certificationEdition(create2015EditionMap())
+                    .edition(create2015Edition())
                 .certificationResult(CertificationResult.builder()
                         .criterion(CertificationCriterion.builder()
                                 .id(1L)
@@ -431,7 +433,7 @@ public class FunctionalityTestedReviewerTest {
                 .build());
 
         CertifiedProductSearchDetails listing = CertifiedProductSearchDetails.builder()
-                    .certificationEdition(create2015EditionMap())
+                    .edition(create2015Edition())
                 .certificationResult(CertificationResult.builder()
                         .criterion(CertificationCriterion.builder()
                                 .id(1L)
@@ -463,7 +465,7 @@ public class FunctionalityTestedReviewerTest {
                 .name("another func tested")
                 .build());
         CertifiedProductSearchDetails listing = CertifiedProductSearchDetails.builder()
-                    .certificationEdition(create2015EditionMap())
+                    .edition(create2015Edition())
                 .certificationResult(CertificationResult.builder()
                         .criterion(CertificationCriterion.builder()
                                 .id(1L)
@@ -494,7 +496,7 @@ public class FunctionalityTestedReviewerTest {
                         .number("170.315 (a)(1)")
                         .title("a1")
                         .removed(false)
-                        .build()).toList())
+                        .build()).collect(Collectors.toList()))
                 .build());
         a1FunctionalityTested.add(FunctionalityTested.builder()
                 .id(2L)
@@ -505,7 +507,7 @@ public class FunctionalityTestedReviewerTest {
                         .number("170.315 (a)(1)")
                         .title("a1")
                         .removed(false)
-                        .build()).toList())
+                        .build()).collect(Collectors.toList()))
                 .build());
         a1FunctionalityTested.add(FunctionalityTested.builder()
                 .id(4L)
@@ -516,7 +518,7 @@ public class FunctionalityTestedReviewerTest {
                         .number("170.315 (a)(1)")
                         .title("a1")
                         .removed(false)
-                        .build()).toList())
+                        .build()).collect(Collectors.toList()))
                 .build());
         a2FunctionalityTested.add(FunctionalityTested.builder()
                 .id(3L)
@@ -527,7 +529,7 @@ public class FunctionalityTestedReviewerTest {
                         .number("170.315 (a)(2)")
                         .title("a2")
                         .removed(false)
-                        .build()).toList())
+                        .build()).collect(Collectors.toList()))
                 .build());
 
         maps.put(1L, a1FunctionalityTested);
@@ -535,10 +537,10 @@ public class FunctionalityTestedReviewerTest {
         return maps;
     }
 
-    private Map<String, Object> create2015EditionMap() {
-        Map<String, Object> editionMap = new HashMap<String, Object>();
-        editionMap.put(CertifiedProductSearchDetails.EDITION_ID_KEY, 3L);
-        editionMap.put(CertifiedProductSearchDetails.EDITION_NAME_KEY, "2015");
-        return editionMap;
+    private CertificationEdition create2015Edition() {
+        return CertificationEdition.builder()
+                .id(3L)
+                .name("2015")
+                .build();
     }
 }
